fix: img overflow in create and details

--- a/webapp/src/main/webapp/css/main.css
+++ b/webapp/src/main/webapp/css/main.css
@@ -169,6 +169,12 @@ footer{
     object-fit: cover;
 }
 
+.createImg{
+    width: 45rem;
+    height: 36rem;
+    object-fit: cover;
+}
+
 .rating-stars {
     cursor: pointer;
 }
